add bio controller and route to vendor and swagger.json
